# ChangeLog for sys-kernel/linux-headers
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.436 2015/04/14 11:02:54 ago Exp $

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> linux-headers-3.18.ebuild:
  Stable for ia64, wrt bug #541048

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> linux-headers-3.18.ebuild:
  Stable for alpha, wrt bug #541048

  01 Apr 2015; Agostino Sarubbo <ago@gentoo.org> linux-headers-3.18.ebuild:
  Stable for sparc, wrt bug #541048

  31 Mar 2015; Agostino Sarubbo <ago@gentoo.org> linux-headers-3.18.ebuild:
  Stable for ppc64, wrt bug #541048

  30 Mar 2015; Jeroen Roovers <jer@gentoo.org> linux-headers-3.18.ebuild:
  Stable for HPPA (bug #541048).

  30 Mar 2015;  <tgall@gentoo.org> linux-headers-3.18.ebuild:
  stable on arm64, minimum needed for HiKey and other boards

  28 Mar 2015; Agostino Sarubbo <ago@gentoo.org> linux-headers-3.18.ebuild:
  Stable for ppc, wrt bug #541048

  25 Mar 2015; Agostino Sarubbo <ago@gentoo.org> linux-headers-3.18.ebuild:
  Stable for x86, wrt bug #541048

  24 Mar 2015; Markus Meier <maekke@gentoo.org> linux-headers-3.18.ebuild:
  arm stable, bug #541048

  06 Mar 2015; Mikle Kolyada <zlogene@gentoo.org> linux-headers-3.18.ebuild:
  amd64 stable wrt bug #541048

*linux-headers-3.19 (09 Feb 2015)

  09 Feb 2015; Mike Frysinger <vapier@gentoo.org> +linux-headers-3.19.ebuild:
  Version bump.

  31 Dec 2014; Mike Frysinger <vapier@gentoo.org> linux-headers-3.16.ebuild:
  Mark arm64/m68k/s390/sh stable.

*linux-headers-3.18 (31 Dec 2014)

  31 Dec 2014; Mike Frysinger <vapier@gentoo.org> +linux-headers-3.18.ebuild:
  Version bump.

  16 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> linux-headers-3.16.ebuild:
  alpha/ia64/ppc/ppc64/sparc/x86 stable wrt bug #528902

  15 Nov 2014; Mike Frysinger <vapier@gentoo.org> linux-headers-3.17-r1.ebuild:
  Fix install on x86 of headers when headers were removed #527548 by Alex