@@ -3,11 +3,11 @@ DEPEND=app-arch/xz-utils dev-lang/perl
 DESCRIPTION=Linux system headers
 EAPI=4
 HOMEPAGE=http://www.kernel.org/ http://www.gentoo.org/
-KEYWORDS=alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd64-linux ~arm-linux ~x86-linux
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux ~arm-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=!!media-sound/alsa-headers
 RESTRICT=binchecks strip
 SLOT=0
-SRC_URI=mirror://gentoo/gentoo-headers-base-3.18.tar.xz mirror://gentoo/gentoo-headers-3.18-1.tar.xz
+SRC_URI=mirror://gentoo/gentoo-headers-base-4.0.tar.xz mirror://gentoo/gentoo-headers-4.0-1.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	kernel-2	b544eac9542c54048d7dd55302455f51	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=381eb68355105f73c503aa438b8c8843
+_md5_=4dc4aeefc7ce578ba31233d935aef259
