@@ -25,6 +25,7 @@ DIST gentoo-headers-3.6-1.tar.xz 3520 SHA256 367d83b367f163b07deb10ad8b0fd306d8a
 DIST gentoo-headers-3.7-1.tar.xz 3212 SHA256 f07407df6577a1a544ed485e0285ad6adca66b516e4ff6af525f36ad2a6cece1 SHA512 d802cf3f3964a80ef2ffa3750139c0aa6b6520e78ec6eaa087532964a6a80999c937b8deb47ac76a250f649d8080308e8f5a5f33bb4859f3907d5dd41fede93f WHIRLPOOL be6aa3e709295d9a74841bf8fb4823ffe3019700ee9ac118b78bbcab50b60a3c404699e0a96267a9aeb71d6e7e62ed770ab5dbb0d8a0097a47f4b20cad663835
 DIST gentoo-headers-3.8-1.tar.xz 3204 SHA256 6790d6934be43251bcc40d19da3776cd004affcf8f62bac7bc9cde91cfd065ba SHA512 b5534730f4a50b41b220f5041aad6b871a7a05bb2fa19f67523baa3788a9ab355cf26f3f3443e50e7defe754a6b828e169f8ce5dc427de3a6690adccaa33add3 WHIRLPOOL efad77ad1a3788eb088393ee67d688d981c768fc4ad5d40b7764e8811e0e002ad0b9cdd2590f61997b277d86414a1e68bc709e923876d91a545a184530da54f2
 DIST gentoo-headers-3.9-1.tar.xz 3204 SHA256 b7f54447f0787cef16796e64a52fe7a4891d1b0c7198d87d00b4203eb40a938a SHA512 c206dccafa969d80406cdc4b6747aeff7451c5eab6b4b35827eaa102cdda4f69a3944d79b3b78276ca5122a68e980bf047f2cc53255aff7959fa5863cbfdf59c WHIRLPOOL 19e84a5ef8274adc9cffe383f4c95180210c8fb871082eab90bdc8d7ec98d617ab858e6c3aa19f61fa388f171ee695553b4aea1b6853a8d50a96debb15fda471
+DIST gentoo-headers-4.0-1.tar.xz 4232 SHA256 565ba3d4bb15dcc26c4b7f3908a1467cef4872f56f278aaa92bc21d2a08e1197 SHA512 1d9b42e4d2e6235781d7dda6bfb516ef4f528a16e2830844c4eadc74588d4899d4b215b622354b117c5ac7360380eeb6baada8a3d641b2ee8ec87d528e2792f8 WHIRLPOOL 599660497c757ff7f1ea7b6bfdfaebd35dec8f0d162d4e143be908b074b62aa66a1feafbbb10ef0eed3e97377d3d66b08a5ec74fa91756dfff8234adc171a5d8
 DIST gentoo-headers-base-3.1.tar.xz 4814816 SHA256 76bc4baeb1d039a171f6316d3ac6b8f50341937242570988d6705b2d9b02a0c0 SHA512 1218eba261172f5480d6b399be25f9fff0d3c9de48f6b47669820d746957cd9225a7beb3d94eb3d7779c1d28a97da0623dd494a56c8761c092d939afcd99d42f WHIRLPOOL 85869c824fa2a691f50feb94d85aa63103e4cece793273e8d9eca7b23e8459e5fbe31b46e1f97e4f62a1fc8e03b27827ac70ed061369c9df8efadc6e8beb7962
 DIST gentoo-headers-base-3.10.tar.xz 3643164 SHA256 ac054e6370381f6ba504371e6125551489f0dbb3207a79f9f328a0b9a6eac8bb SHA512 1c2c6cbdd5dd7bcabdd0854376202806bd45af519046aa776c3cad54730b8d4f5b0eb7e7bc580314aca070ce7f9f548c43b74fd11c8fc19e4a65c8834e0112ca WHIRLPOOL f86788bffee26f9598fa9d94ad4c590558d6d08f85c4d7888e9115aefe4d783a4234f835c93f2137abdebba8f84d5a8fdb89e9e21bb72073902a49584b0b9932
 DIST gentoo-headers-base-3.11.tar.xz 3664640 SHA256 09765c907425044efbc423e00b48ffa3a976a73ff9a71bb03139fa4ec924b240 SHA512 59ae911e9780e49954ce9671ef109537c90180c24c7eb6e639e8d4d2a4bec503d5c198cacfece4d203762a15ad69a11e05e22d31ea373deea4b9d7105047b513 WHIRLPOOL 67b64bc74321e36a1b125ed4db45df9a8af8acd4854cf51eadf4d8080c47c1a3ecc485758d518c5035ec2b14aa32ad69ec06ab0c670f117be02059c8005d011e
@@ -44,6 +45,7 @@ DIST gentoo-headers-base-3.6.tar.xz 5264368 SHA256 214bc04b1327980d62ecc73dacea4
 DIST gentoo-headers-base-3.7.tar.xz 5322476 SHA256 6bd75073dd2565f87e3ae03e71a2f211146a50a935b998e3f8c670b825aa3fb0 SHA512 8f74730267e7a2e914f17ab6052b0512e88c80409908b7b598093871f8ab834dd3c453b149a02bded1421a420163769c87783f43351eccd5be614856b152d939 WHIRLPOOL 5d0527ef71b4983f046828e27abb92ccb935ad0a4d34e3aa1c0618d7f580a058b2ede73189280f56638e6bac3d522519b0aa0a4a087253b8418db863e7c0e02b
 DIST gentoo-headers-base-3.8.tar.xz 3585964 SHA256 ce0ccbff24c3b7472c7c5e9fb4dfad876716e40b26b192bbb075794128e92e86 SHA512 55bc78cfbef75cdaccf90f913017d54f9938a942cafb24a0054266cc5b1ddd263d3c2e06625d813531596359b7cc348e016598f2b3815cc73ab33ec4f3ac86a1 WHIRLPOOL b63b030352c801b3de4f371c49e7f475d097b5f00a5936580dab318383b72f4589c023cc84c1038c19a618b7248d9b743842207a1f2ea572a7f265c65ccaed4c
 DIST gentoo-headers-base-3.9.tar.xz 3697180 SHA256 7cfb2066936dc3668d16ff8881cdb9ccec7b16f460b7c9bb753e41c1432ff9be SHA512 55ce32970d4f2750648b76dfde53250c7dd8800672a0c3831844f54e4c2ada1e20a66deb1079e4e61f2250dda929abce4db65634e0b042c3293f31a1f6d49210 WHIRLPOOL e13bec4bfd735ac156acbf6b5b6d968e30b2c2ac1963302101fc1e029e256582ce4721a6d0fdcca2d26dce461959fdb0a5b98087d5014ec2e5c1e878c489c60b
+DIST gentoo-headers-base-4.0.tar.xz 3815288 SHA256 96c4ff8acc80fe6c401e0452212cd49fec50c7eccceb5b1e79e9b3a70d309318 SHA512 42e158532181dd225009a4b564cbd1d7ae00485ec4a3d56ab7cd54b6816e171b6a6a9217b9db460ceb701b473a4082f1f4f9cd7a7da6fde2bba5591d95d03fc9 WHIRLPOOL 5a9d29237f1729109dee4b9990efa339b1e953e5663a2774dac17a463d8c7f5934f4a0627a7b46496fa2127e9d9b205f673a1b32c4c77bb5b849078a39a5db5c
 DIST linux-2.4.33.tar.xz 25725956 SHA256 f5e58cc4b85cfc84accb284b9b65eec24ba637d6bacddc734948a8ca3ca75d4b SHA512 cc5b6ba5824471a81b80e973378a706882b10951ff4ff6c888e849fb5efff88cce20d2265ba5c8161605cbf87d1759851f9e4703720dd0ac339ec129985d4b0e WHIRLPOOL 7389d6adbaed5731d4f58fa6e1c3e58c65b326329c91a40ab75d50d8c5dc3c18f04aa90d30ff04bd9db90ed94079cd7efcef600bb4e000595446722bdfbf642d
 DIST linux-2.4.36.tar.xz 25535188 SHA256 7850a814e5be336214b9e4b68cfcf3d03c8061b4d7b9926aac65b968435fcfbd SHA512 e203ceebf97bd4228bb680ded39d6ebc801dd77eb82bafc63802e548849f5922b5c80462ba7e0564c04d40cc777414c2cefe57d3c0024b811277d6c2dddd38d2 WHIRLPOOL ba1452d09e97a52ff2b9003a46680beba399ac6d77f690c1b19c262903018f7933b8d048106a2cd1a626c1293e4a515651ca2608365f73d14befc8faf45f7090
 DIST patch-2.4.33.3.xz 5796 SHA256 89fe1dbf5cb9513b73f9825328765c342f6054186f0b41c08b8612a6a4ad7a90 SHA512 9f6b9118f4888b34b7b20ba0d6c9ffaba547dea0f7cc93019117ad94411d9008e5513367e7da23a19e347f63ef823a493972850edd69b140d528454fa65124c9 WHIRLPOOL 75a06efb368fe5268fc0e6a625a4144dacf0e4ad3d4b6a4128e6e483dd809d294f406d96314b60138365d35397799f3d2c507f3e4eefdce17f7732eac565e55f
@@ -59,7 +61,7 @@ EBUILD linux-headers-3.15.ebuild 1512 SHA256 e2226be26e24cd44590dee9ea4d84c894f2
 EBUILD linux-headers-3.16.ebuild 1569 SHA256 64b1133bb31b00d6e6ec365038fd5bb33dc46c5869161ac8f979734922fc7620 SHA512 36c472ac659d066a3f87546c4449462454d2c306446a20a49a91fd7972b3c2da47cb4b93f585fc643489e9ffb27ce5ac63c27611b793bc930200f11be1a36c45 WHIRLPOOL adb7961fc682b6de92baea1cdda51d20be23a7fff9c411b6f0298a2126843ce75ae5d08099828d23af2c0fdaf9ea7aa53ab86b0eebe3779b3111023a84c11006
 EBUILD linux-headers-3.17-r1.ebuild 1585 SHA256 d17bccef29dc6c6e3200e51f6184b331acae7f2e9074a7693a354d6057dc37b3 SHA512 3e2d4d26848bd34ce4d42c628910ca2093988cd17fef9c84e20e8f435c72a780474d8038716713f010c38b19d03b12d1366ea0e2c6bb939a6b29555cb221e454 WHIRLPOOL 5b6cae75bc33c4b2dc4c49cbe26c518efbe5e8cdcfd41f72a147a06a34ba40674e3f09cdc77d871e0549769d4f2222c41f7f7c5f5e291a83dc733192d4f4dac9
 EBUILD linux-headers-3.17.ebuild 1582 SHA256 c8e536f30a7fb120119e14c355e631d6ecdbe11442c1f59d143d72ad4301553f SHA512 77b6405aa848e91c07aea87fa3d81d0ff9321aac096fc8e4c159510cf0f7279e39b5cb596235a3a72b623c6b37b9f0774e8a1e7119d3e047c8102f1848fd749e WHIRLPOOL 2f1d2967b391d2e2a56b6d552bd58ccd001b404dc5e001d310078fb91515df960e396382232d4f36971bb773751f59c1fe92c8bbdba705f691827ddafc2d52bd
-EBUILD linux-headers-3.18.ebuild 1570 SHA256 13f2eff701eaf9f525cae1580416bde3000e9038163834937a1af223640fe5de SHA512 ceaa01a9d07832e26306e7f6f8eb02ded7074502d5ca3aa3eeea62f1794042a5bffccab24f40fdb8aafb8db1a135827db378be885d8783c6b8c1947c21d53705 WHIRLPOOL 923e191e6e792f66464d4a639c5eed7a12f470d94da8573a7af19961358152a86f747811bb93853708bf51cd59dc811237ddebd5f60861b6c17ff33f0de47304
+EBUILD linux-headers-3.18.ebuild 1570 SHA256 7582750d35ecf2fd61801880ab8d93c25cd79a486ea46cf3279c95820a8b3585 SHA512 3ca493a668d02c4ed25af401a2d126a06c670487bff45f3e5be154cf49bdc6b1879e848844840eabb5a517ef1d952ec28228a0a707547000c86a101442d24362 WHIRLPOOL 65581e88901f0d98116c68bfb1f5874ab4ff0d2297cf5eb8a60309c3ffbe3f507a51841df7869eab818b71ee5bd9f522d1e2b400ffd8e35f686c993c46a7035d
 EBUILD linux-headers-3.19.ebuild 1588 SHA256 c25f3eea3905ccfcd719cc66da9ccd1d789d34b4b2b479c7137ab2ff9b7010cf SHA512 d5d46386a7df8cc87d76ea3351efd40222a19f2670e88532c9007a18cb8235f360e563c431d599b08d66b6ce7ab199eaa8487f8d1fa1ea115e52107d81702ec2 WHIRLPOOL 21fbec57a2e3547cdf83b4f4b5fa0e2a564e13cca4776e1243f316f836b901e278e695225a2936d1a52d2491e6c23b8ec884c62ade9eacd056a8189e90791d6b
 EBUILD linux-headers-3.2-r1.ebuild 1479 SHA256 1e1bf8e4222bd637e15bf63cfa3d237cdc2fe766d08416aba8931c403b2be943 SHA512 84e2d5a932fda3ae0d6e163c08a829f211c96bcef336d0f78308b383007d138192f6ddcbc99f4e329c36d069fa82904cd807970d098458146da4f2626c422962 WHIRLPOOL 22ae1da282c3d5956bbe6594aef8b955125794b227931204dcd15e0fb98547ceb0ae2b52b5ef495c2740850536c57a2a991137a11f2820573bec332a25d941b1
 EBUILD linux-headers-3.3.ebuild 1476 SHA256 f79706fc7a57f3860e60c6743d25265d6a20d5acb5de571688c189a66748839a SHA512 d37d5f8f948c850c9bff695739d526805419b9a14e6ed30bf208de76f9ecd3c977998a5b3c8be23bdf5c6279fec0ac368995ce8d604e8d13ed8aa3e4e17ecff3 WHIRLPOOL b1c5720e1d7260e8fb976232fd5f39ad5d6824c5e176cc941c4b6d9fcc27cf05165d5e3ae02c3941a1a467c2f62cc511150f100a2af7d493a6a5a3c6b499f93a
@@ -71,22 +73,23 @@ EBUILD linux-headers-3.6.ebuild 1375 SHA256 630a9237c33ac12b51ce5697be63c387345d
 EBUILD linux-headers-3.7.ebuild 1375 SHA256 5fc58ab8e3e53eab8ed0bbd62c9830e9fbc052cebd306ada51338a16a6fe3777 SHA512 3f1f7e62db7fd353681ffcc38ca4871754bb09ae19828bfff7cbd74d04ae8f0e45ca0f17eb1aec63206281c976b51009a1681e08ef085204d6e099aca315ec9d WHIRLPOOL 918e7ad6c5864ecb58555a4ee8c93e70c924708318310a35a4a75729ee0c39457ace8c88379f012c2ecdbba7c5d5bec427d380d5210486048eea88d410d07cf2
 EBUILD linux-headers-3.8.ebuild 1388 SHA256 4e89ec02e1317603a557678695922bfc152917fd8998711209533bc0a8d97e77 SHA512 598b61a3183784b3327e558bf97bfad10601be1e0e23851995d3ff64e2ca1873b8e6a0ccf304b84ee8abc7bbadd717dff30f9934c241567af8a84881e46a96d1 WHIRLPOOL b1842d98095967869330803cdb47597ea3c5c8d1a2d27ea2947fc679faea8c1fa0ce11bbe23d536833433d8c30200e33ba1a16a365e5d3974a61a2f460dff94a
 EBUILD linux-headers-3.9.ebuild 1669 SHA256 cdb9545f30837ba0072f732fd1f2670e3aeba7e6ae73cf78407dd4602d7a5b63 SHA512 fc08db156a84194bf44f4b572533c37abc8ef12123afc3ade0d485db7cbc53c0305be3232b67a77327f650845a00f5836fa268c2ee8bb987e4c610562dc8f129 WHIRLPOOL 96fa6e8122ec0a833fc78945ffd956c44e09bfc11feb1f55f8e5ef765bc6a7112be9729075a16a07d0dd23f37734a0f2752f2f45c114bcf9c8d56f5e919b9762
-MISC ChangeLog 68061 SHA256 1b43aea3d9d890277fa42fb4e0d1e4cac6af7e746fec030e194318b19bc6026c SHA512 e0e1c8f82d16e72720943bf65fc32c206d8c5ca3d2a0c72dfd2ca005152bc427417525059df21b7669befc809295834c890c06f63b8480faaaebde52dd88dd13 WHIRLPOOL 7d445445fea636a78738d3a76a323eaf20aa713c871f72bb61fed8e0c4dc2a4abc15c4c7433c80041f6bac38d8ebf224dd7e1a9e0e456b31ab02a0a68d6779c6
+EBUILD linux-headers-4.0.ebuild 1587 SHA256 4824cf2a19203f366070cb2a269ce42d0d5a18c61d477e13f655c067bde17008 SHA512 fa725a9ae14c45da58f49c03a7c6d104f21f52bcfddf01f10836eada2c0f1d69ebe61f32c66a3204b002de307d55efa65b6c459861d958bf9449a32ef6cc8d86 WHIRLPOOL 7231561a31b692be178a9d4df720372f31fd470b4e8e6a7b5ad8c238c95a0e347337098644521b2b1156c3c2c7acade908302f5a3a76ba1b708428830fce4a76
+MISC ChangeLog 68298 SHA256 95f671186b108cb7b79ee709a11e07d7da88d1dc7ac1659ff4e5917b41c70b36 SHA512 6d1f36f3695117cc9947e674364612f68d7ac076eedd704894a80856295ad33827084c8153e16c4c96b435364acc7f559815a56788707e7f4c71a28aa44baf49 WHIRLPOOL 17f7fd2a45222da6e009bdec982e436d7f26d6602835ef1727422e19ad05adb421a4d7b49bc79f7d069a16d8485713eeed5c9a006511d05873c2b63b45c01ed2
 MISC metadata.xml 247 SHA256 6858f34fb3375b80b0071f911f6ead887ae327e0e27ecd39be3e8ccb2609fa0a SHA512 b82456bc3441754e0f316575316497d293374ac4bb80e1b7e4b158358a3e920a6da4bb223a97412bbeba8f51ea4555a84267f4ebc8eecdb06941038efd03c47f WHIRLPOOL 96213c23913ccc5a89e2fa924701b916106c15cd24940f7bc2c8896c6a5545f840c1bd21ccc0882a928fd44628cce49c7cd8d25957ffe6c64b4755b467e6344d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVLPPfAAoJELp701BxlEWfrqIP/A2+T317bmjIhCPgrb8XwB8e
-P3rROtsHxy4S9t7Y56qlet0lFGIqWIuWGmk96B+2BhkP9xYnOpHA+0bULZyXg6tj
-HRhJdPh6xKzKtUcZCSAi7PO0Cbj2HR2bXZ7q/LZc8yTddZwo9fWXd7NbGa5dUadx
-3gAyFgv/nUBQzM7rk0bn6Jhcgi+RsGmDgdpgyGj+3pUATCdUjehj2tg55LRTHGpJ
-dspnd32rgS6uGzQZgnrRGERddPDoCM34TLWUd1fKjYISrvaWQriC27qKOlM6ZByX
-roNejGVY+1PwLJux28UOaxKygXnbQhoS0Tvvq9NfbcUdSNRf5g8oltmGiA8e1TxC
-NQiGrv23UgLfQ2RGOs/NKfy8PtkJs6adboab5t211FKlcH5shm7h7LRPWETXZeRq
-kkbXN+r5aWiyWnjH6VNuDXSZrAXuO+yxpg3fKK/eZ+gN8wVrwYIwHXLm1vmP9cII
-OfVhUQ78edhuKYiMx1slMdunQYfKTLizQT/ESovUKCZZ0nQhKjbXvYraaRewNCe4
-UY2gG4jgLzA7/FR+RVlvbGlLH8ALana51jvdYGQm7qWMlZD4Jc/mZ2pbA/9dz4Yp
-/uGNzQOs58d9MBvNIcW+hiGSh9IngYH/s8xXU49hcY/8SXI/9eTCZPsXb9eH4L3G
-uRys1fzdgb24xDfx/ZvN
-=2Rkk
+iQIcBAEBCAAGBQJVLefgAAoJEPGu1DbS6WIAngcP/1Jp929pJCcwgDjjsOfrrFoT
+gbt0vUvKKCw4e1v8laWJ4E2DCb6k3yaAWMyuIpPBBDjZE7WkC155Lwm0cKutItFY
+hAmEfXFEEB1tf3fF02RqiYW9Nm3ZmYILC13HtLwgYmObtXf2QML9HDesOuatGBzz
+2ndkMFwg45DvTirGkb8toDVhxOQb2VuMEIjLpbPFGtI0GhoNCeDi6QwRDSBj8fz+
++T1ukvvneOW6DWdH4yCmuW69ohL3Iz9fazVMlmSS8EAFhL4T08rvKumJFWXW0pHc
+6vzzfIlxNiijW5mTnLXE8+0KbwNOhHPG/e/M2X38n6RWnZrRO35uSYtonQRZZhO3
+h/Yw81dxqtMpouhc65IkMAM2L1RKfJv9PjYbqYjnPiiDs3XlPYcnDXNf+q6xvJLA
+V7uTUoRmO0bFaDQXbi+Cly3wKYNXWv8IJc+BD4ZIyxnMn1Sdd4KAOF3nuiY7J/d4
+nQ+l7dEvnKgjx2vl/exthACREpe3rlJQBLhdQmSf47qilAdL8HLZuXz7BUrfzq7J
+f68koLiJJG/H8b+xCBApXbD7besWAGS7EEhspHZNP1xe5sut6BCc00YFqb5aWQ0S
+P+RJ+ZTZn1N/uKhYyc0oP2f1g8U+WgTCe8fHm7ornf2219Hei3R6INMVUE6goTNX
+x6WnmhLqlRAh4f1MGuDu
+=lbNB
 -----END PGP SIGNATURE-----
